# trader

./: .gitignore  README.md  dismiss_ibc_dialog.sh
bot/: main.py  monitor.py  pyproject.toml  reconciler.py  scan.py
bot/bot/: backtest.py  broker.py  config.py  cost.py  earnings.py  fees.py  fill_quality.py  hours.py  jobs.py  llm.py  main.py  notifications.py  pydantic_models.py  regime_det.py  risk.py  signals.py  sizing.py  snapshots.py  strategy.py  tick_size.py  universe.py
bot/bot/strategies/: __init__.py  constants.py  overnight.py
bot/tests/: test_auto_kill.py  test_config_validate.py  test_earnings.py  test_fees_rr.py  test_fill_quality.py  test_ibs.py  test_llm_tier_split.py  test_moc_window.py  test_no_widen.py  test_reentry_cooldown.py  test_risk_caps.py  test_schema_validation.py  test_snapshots.py  test_stops.py  test_strategy_constants.py
bot/tests/tests/: test_fees_rr.py  test_ibs.py  test_no_widen.py  test_trend_filter.py
dashboard/: middleware.ts  (+3 more)
optimizer/: README.md  pyproject.toml
optimizer/optimizer/: __init__.py  db.py  llm.py  safety.py  scheduler.py
optimizer/optimizer/anomaly/: __init__.py  detector.py  drift.py
optimizer/optimizer/canary/: __init__.py  runner.py
optimizer/optimizer/config_store/: __init__.py  versions.py
optimizer/tests/: test_canary_apply_rollback.py  test_config_store.py  test_llm_sources.py  test_meta.py  test_metrics_definitions.py  test_metrics_refresh_integration.py  test_numerical_integration.py  test_safety_guards.py  test_scheduler_anomaly.py  test_validator_integration.py  test_validator_unit.py
(+133 files in other folders)
