[project]
name = "trader-optimizer"
version = "0.1.0"
description = "Self-optimization service for the trader — proposals, adversary, canary, apply/rollback."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "httpx>=0.28",
    "numpy>=1.26",
    "scipy>=1.12",
    "optuna>=3.6",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
]

[tool.uv]
package = false
